--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "zwave"
   ],
   "dependencies": {
-    "homenet-core-tsd": "^4.0.0-beta.1",
     "node-zway": "^0.2.2"
+  },
+  "devDependencies": {
+    "@homenet/core-tsd": "^4.0.0-beta.8",
+    "@types/node": "^7.0.4"
   }
 }
