--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node-zway": "^0.2.2"
   },
   "devDependencies": {
-    "@homenet/core-tsd": "^4.0.0-beta.8",
+    "@homenet/core-tsd": "^4.0.0-beta.8a",
     "@types/node": "^7.0.4"
   }
 }
